--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - images/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
@@ -66,7 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   #assets:
-     #images/
+    #images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
